--- a/CatMgr.html
+++ b/CatMgr.html
@@ -14,8 +14,13 @@
         .section { display: none; }
         .active { display: block; }
         .treeview { max-height: 400px; overflow-y: auto; margin-bottom: 10px; }
-        .treeview ul { list-style-type: none; padding-left: 0; }
-        .treeview li { margin: 5px 0; }
+        .treeview,
+        .treeview ul,
+        .treeview li {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
         .treeview .node { display: flex; align-items: center; }
         .treeview .toggle { cursor: pointer; width: 20px; text-align: center; font-weight: bold; }
         .treeview .subcategories { display: none; padding-left: 20px; }
@@ -41,7 +46,6 @@
             | <a href="#" onclick="showSection('settings'); return false;">User</a>
             | <a href="#" onclick="showSection('categories'); return false;">Categories</a>
             | <a href="#" onclick="showSection('products'); return false;">Products</a>
-            
         </div>
 
         <div id="categories" class="section">
@@ -139,7 +143,7 @@
             const toggle = document.createElement('span');
             toggle.className = 'toggle';
             toggle.textContent = '+';
-            toggle.onclick = () => toggleSubcategories(category.id, li, toggle);
+            toggle.onclick = () => toggleSubcategories(category.id, toggle);
 
             const checkbox = document.createElement('input');
             checkbox.type = 'checkbox';
@@ -162,8 +166,10 @@
             return li;
         }
 
-        async function toggleSubcategories(parentId, li, toggle) {
+        async function toggleSubcategories(parentId, toggle) {
+            const li = toggle.closest('li');
             const subUl = li.querySelector('.subcategories');
+
             if (subUl.classList.contains('open')) {
                 subUl.classList.remove('open');
                 toggle.textContent = '+';
@@ -175,18 +181,16 @@
                         const data = await response.json();
                         console.log(`Subcategories for ${parentId}:`, data);
 
-                        if (data.categories.length > 0) {
-                            const userId = document.getElementById('userId').value;
-                            const userResponse = await fetch(`${apiUrl}/${userId}/mycategories`);
-                            if (!userResponse.ok) throw new Error(`Failed to fetch /${userId}/mycategories: ${userResponse.status}`);
-                            const userData = await userResponse.json();
-                            console.log('User Categories (sub):', userData);
-                            const savedCategories = userData.categories || [];
+                        const userId = document.getElementById('userId').value;
+                        const userResponse = await fetch(`${apiUrl}/${userId}/mycategories`);
+                        if (!userResponse.ok) throw new Error(`Failed to fetch /${userId}/mycategories: ${userResponse.status}`);
+                        const userData = await userResponse.json();
+                        console.log('User Categories (sub):', userData);
+                        const savedCategories = userData.categories || [];
 
-                            data.categories.forEach(cat => {
-                                subUl.appendChild(createTreeNode(cat, savedCategories));
-                            });
-                        }
+                        data.categories.forEach(cat => {
+                            subUl.appendChild(createTreeNode(cat, savedCategories));
+                        });
                     } catch (error) {
                         console.error('Error in toggleSubcategories:', error);
                         document.getElementById('response').innerText = `Error loading subcategories: ${error.message}`;
